--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
 
 dependencies {
 
+    implementation'androidx.recyclerview:recyclerview:1.2.1'
+    implementation'androidx.cardview:cardview:1.0.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
