--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -13,14 +14,8 @@
         tools:targetApi="31" >
         <activity
             android:name=".DetalleCargo"
-            android:exported="false" >
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
-            android:name=".Detalle_Cargo"
-            android:exported="false" >
+            android:exported="true"
+            android:theme="@style/Theme.SIP1.NoActionBar" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
