Se soluciona crash al volver atras sin agregar nuevo cargo, se agregan bordes redondeados a los edit text

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity
             android:name=".NuevoGasto"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.SIP1.NoActionBar" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
