--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,16 @@
         tools:targetApi="31">
         <activity
             android:name=".OnboardingThird"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.SIP1.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".MainActivityOnboarding"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.SIP1.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -34,7 +36,8 @@
         </activity>
         <activity
             android:name=".OnboardingSecond"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.SIP1.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
