--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SIP1"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".Splash"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".DetalleCargo"
             android:exported="true"
-            android:theme="@style/Theme.SIP1.NoActionBar" >
+            android:theme="@style/Theme.SIP1.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -23,7 +36,7 @@
         <activity
             android:name=".NuevoGasto"
             android:exported="false"
-            android:theme="@style/Theme.SIP1.NoActionBar" >
+            android:theme="@style/Theme.SIP1.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -32,7 +45,6 @@
             android:name=".OnboardingThird"
             android:exported="false"
             android:theme="@style/Theme.SIP1.NoActionBar">
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -41,16 +53,10 @@
             android:name=".MainActivityOnboarding"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SIP1.NoActionBar" >
+            android:theme="@style/Theme.SIP1.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".OnboardingSecond"
@@ -81,6 +87,7 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
@@ -88,7 +95,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
