--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.0.3')
     implementation 'com.google.firebase:firebase-database'
 
+    implementation 'com.google.code.gson:gson:2.8.7'
+
 
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
