--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
         android:theme="@style/Theme.SIP1"
         tools:targetApi="31">
         <activity
+            android:name=".GuideThree"
+            android:exported="false"
+            android:theme="@style/Theme.SIP1.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".GuideTwo"
             android:exported="false"
             android:theme="@style/Theme.SIP1.NoActionBar">
